# sparrow

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE.txt  README.md  README.rst  conanfile.py
src/Sparrow/: CMakeLists.txt  Files.cmake  config.cmake.in
src/Sparrow/App/: CalculationHandler.cpp  CalculationHandler.h  CommandLineOptions.cpp  CommandLineOptions.h  IRSpectroscopy.cpp  RTSpectroscopyDriver.cpp  SparrowInitializer.cpp  SparrowInitializer.h  main.cpp  mainTest.cpp  parameters_location.h.in  parser.cpp
src/Sparrow/Embed/: Basisfile.cpp  Basisfile.h  CMakeLists.txt  Common.h  DftbParameterSet.cpp  DftbParameterSet.h  Indent.h  NddoParameters.cpp  NddoParameters.h  README.rst  embed.cpp
src/Sparrow/Python/: Calculation.cpp  Calculation.h  __init__.py  setup.py
src/Sparrow/Python/Tests/: CalculationTest.py  CalculatorTest.py  CalculatorWithReferenceTest.py  f2.xyz
src/Sparrow/Python/sphinx/: conf.py.in  genindex.rst  index.rst  python.rst
src/Sparrow/Sparrow/: ParametersHeader.h.in  SparrowModule.cpp  SparrowModule.h
src/Sparrow/Sparrow/Implementations/: DipoleMatrixCalculator.h  DipoleMomentCalculator.h  Exceptions.h  GenericMethodWrapper.cpp  GenericMethodWrapper.h  MoldenFileGenerator.cpp  MoldenFileGenerator.h  OrbitalSteeringCalculator.cpp  OrbitalSteeringCalculator.h  OrbitalSteeringSettings.h  Sto6gParameters.h
src/Sparrow/Sparrow/Implementations/Dftb/: DFTBMethodWrapper.cpp  DFTBMethodWrapper.h  ParameterSet.cpp  ParameterSet.h
src/Sparrow/Sparrow/Implementations/Dftb/Dftb0/: DFTB0.cpp  DFTB0.h  DFTB0Initializer.cpp  DFTB0Initializer.h  Dftb0Specifier.cpp  Dftb0Specifier.h
src/Sparrow/Sparrow/Implementations/Dftb/Dftb2/: DFTB2.cpp  DFTB2.h  DFTB2Initializer.cpp  DFTB2Initializer.h  Dftb2Specifier.cpp  Dftb2Specifier.h
src/Sparrow/Sparrow/Implementations/Dftb/Dftb3/: DFTB3.cpp  DFTB3.h  DFTB3Initializer.cpp  DFTB3Initializer.h  Dftb3Specifier.cpp  Dftb3Specifier.h
src/Sparrow/Sparrow/Implementations/Dftb/Utils/: DFTBCommon.cpp  DFTBCommon.h  DFTBTypeInitializer.cpp  DFTBTypeInitializer.h  DensityGuess.cpp  DensityGuess.h  Overlap.cpp  Overlap.h  PairwiseRepulsion.cpp  PairwiseRepulsion.h  Repulsion.cpp  Repulsion.h  RepulsionParameters.h  SDFTB.cpp  SDFTB.h  SKAtom.cpp  SKAtom.h  SKPair.cpp  SKPair.h  ScfFock.cpp  ScfFock.h  SecondOrderFock.cpp  SecondOrderFock.h  SkfParser.cpp  SkfParser.h  ThirdOrderFock.cpp  ThirdOrderFock.h  ZeroOrderFock.cpp  ZeroOrderFock.h  ZeroOrderMatricesCalculator.cpp  ZeroOrderMatricesCalculator.h
src/Sparrow/Sparrow/Implementations/Nddo/: ConstexprParameters.h  NDDOMethodWrapper.cpp  NDDOMethodWrapper.h  Parameters.cpp  Parameters.h
src/Sparrow/Sparrow/Implementations/Nddo/Am1/: AM1Method.cpp  AM1Method.h  AM1PairwiseRepulsion.cpp  AM1PairwiseRepulsion.h  AM1RepulsionEnergy.cpp  AM1RepulsionEnergy.h
src/Sparrow/Sparrow/Implementations/Nddo/Mndo/: MNDOMethod.cpp  MNDOMethod.h  (+4 more)
src/Sparrow/Sparrow/Implementations/RealTimeSpectroscopy/: CMakeLists.txt  SpectroscopySettings.h
src/Sparrow/Sparrow/Implementations/TimeDependent/: DiagonalPreconditionerEvaluator.cpp  DiagonalPreconditionerEvaluator.h  GuessPropagator.cpp  GuessPropagator.h  LinearResponseCalculator.h  LinearResponseData.h  LinearResponseSettings.h  OrderTag.h  TimeDependentUtils.h
src/Sparrow/Sparrow/Resources/Am1/: AM1-STO-6G.basis  STO-6G.basis  STO-6G.cpp  parameters.cpp  parameters.json  parameters.xml  parametersE.xml
src/Sparrow/Sparrow/Resources/Dftb/: ParameterSets.cpp  ParameterSets.h  STO-6G.basis  STO-6G.cpp
src/Sparrow/Sparrow/Resources/Mndo/: MNDO-STO-6G.basis  STO-6G.basis  STO-6G.cpp  parameters.cpp  parameters.json  parameters.xml  parametersE.xml
src/Sparrow/Sparrow/Resources/Pm3/: PM3-STO-6G.basis  STO-6G.basis  STO-6G.cpp  parameters.cpp  parameters.json  parameters.xml  parametersE.xml
src/Sparrow/Sparrow/Resources/Pm6/: PM6-STO-6G.basis  STO-6G.basis  STO-6G.cpp  parameters.cpp  parameters.json  parameters.xml  parametersE.xml
src/Sparrow/Sparrow/Resources/Rm1/: RM1-STO-6G.basis  STO-6G.basis  STO-6G.cpp  parameters.cpp  parameters.json  parameters.xml  parametersE.xml
src/Sparrow/Sparrow/StatesHandling/: DFTBStatesHandler.cpp  DFTBStatesHandler.h  NDDOStatesHandler.cpp  NDDOStatesHandler.h  SparrowState.cpp  SparrowState.h  SparrowStatesHandlerUtils.cpp  SparrowStatesHandlerUtils.h
src/Sparrow/Tests/: GlobalSetup.cpp
src/Sparrow/Tests/AppTests/: beta_carotene_opt.xyz  ethane_opt.xyz  formaldehyde.xyz  molden_input_reference.molden  sft_1.xyz  sft_1_opt.xyz  sft_3a.xyz  sft_3b.xyz  sft_5a.xyz  sft_5b.xyz  sft_6a.xyz  sft_6b.xyz  stretched_methane.xyz  test_sparrow.py
src/Sparrow/Tests/Dipole/: MopacDipoleTest.cpp  SlowDipoleTest.cpp  StandardDipoleTest.cpp
src/Sparrow/Tests/Dipole/TestScripts/: DipoleIsCorrectForBigOrganicMolecule.out  DipoleMatrixEthanolEqualsLibCInt.py  EthanolDipoleTest.py  TestDipoleMatrixBlock1s3sSTO_1G.nb
src/Sparrow/Tests/MethodsTests/: DFTBStatesHandlerTest.cpp  MoldenFileGeneratorTest.cpp  NDDOStatesHandlerTest.cpp  parameters_location.h.in
src/Sparrow/Tests/MethodsTests/Am1/: AM1RepulsionEnergyTest.cpp  AM1Test.cpp
src/Sparrow/Tests/MethodsTests/Dftb/: DFTB0Test.cpp  DFTB2Test.cpp  DFTB3Test.cpp  parameters_location.h.in
src/Sparrow/Tests/MethodsTests/Mndo/: MNDORepulsionEnergyTest.cpp  MNDOTest.cpp
src/Sparrow/Tests/MethodsTests/Pm6/: PM6RepulsionEnergyTest.cpp  PM6Test.cpp
src/Sparrow/Tests/Nddo/: AtomPairOverlapMatrixTest.cpp  AtomicParametersTest.cpp  ChargePairTest.cpp  ChargesInMultipolesTest.cpp  LocalIntegralTest.cpp  MultipoleChargeTest.cpp  MultipoleParametersTest.cpp  OverlapMatrixBlockTest.cpp  OverlapMatrixTest.cpp  PairwiseParametersTest.cpp  RawParametersProcessingTest.cpp  SlaterCondonTest.cpp  Sto6gBasisTest.cpp  VuvBMatrixTest.cpp  oneCenterSlaterIntegralTest.cpp  oneCenterTwoElectronIntegralsTest.cpp  parameters_location.h.in
src/Sparrow/Tests/TimeDependent/: BasisPruningTest.cpp  CISTestCalculation.cpp  SlowExcitedStatesTest.cpp  TDDFTBTest.cpp
(+406 files in other folders)
